glx/testdata/invalid/comprehensive-broken-references/vocabularies/repository-types.glx
repository_types:
  library:
    label: "Library"

